Bug 1201235 - Preserve white space in Logviewer loglines

--- a/ui/css/logviewer.css
+++ b/ui/css/logviewer.css
@@ -67,6 +67,10 @@ body {
     width: 3em;
 }
 
+.lv-line-text {
+    white-space: pre;
+}
+
 .lv-error-line {
     background-color: white;
     color: #333333;
